Introduce separate handler for 9-/I-model vacuums
Signed-off-by: Alexander Falkenstern <alexander.falkenstern@gmail.com>