@@ -12,14 +12,15 @@
  */
 package org.openhab.binding.irobot.internal;
 
-import static org.openhab.binding.irobot.internal.IRobotBindingConstants.THING_TYPE_ROOMBA;
+import static org.openhab.binding.irobot.internal.IRobotBindingConstants.THING_TYPE_ROOMBA_9;
+import static org.openhab.binding.irobot.internal.IRobotBindingConstants.THING_TYPE_ROOMBA_I;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.binding.irobot.internal.handler.RoombaHandler;
+import org.openhab.binding.irobot.internal.handler.Roomba9ModelsHandler;
+import org.openhab.binding.irobot.internal.handler.RoombaIModelsHandler;
 import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingTypeUID;
 import org.openhab.core.thing.binding.BaseThingHandlerFactory;
@@ -38,7 +39,7 @@ import org.osgi.service.component.annotations.Component;
 @NonNullByDefault
 public class IRobotHandlerFactory extends BaseThingHandlerFactory {
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_ROOMBA);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_ROOMBA_9, THING_TYPE_ROOMBA_I);
 
     @Override
     public boolean supportsThingType(ThingTypeUID thingTypeUID) {
@@ -49,8 +50,10 @@ public class IRobotHandlerFactory extends BaseThingHandlerFactory {
     protected @Nullable ThingHandler createHandler(Thing thing) {
         ThingTypeUID thingTypeUID = thing.getThingTypeUID();
 
-        if (thingTypeUID.equals(THING_TYPE_ROOMBA)) {
-            return new RoombaHandler(thing);
+        if (thingTypeUID.equals(THING_TYPE_ROOMBA_9)) {
+            return new Roomba9ModelsHandler(thing);
+        } else if (thingTypeUID.equals(THING_TYPE_ROOMBA_I)) {
+            return new RoombaIModelsHandler(thing);
         }
 
         return null;
